--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Abode of Gods and Demons</title>
+    <title>Gods and Demons</title>
     <!-- link to main stylesheet -->
     <link rel="stylesheet" type="text/css" href="/css/main.css">
   </head>
   <body>
     <nav>
       <ul>
-        <li><a href="/">Home</a></li>
+        <li><a class="active" href="/">Home</a></li>
 	<li><a href="/about">About</a></li>
         <li><a href="/cv">CV</a></li>
         <li><a href="/blog">Blog</a></li>
@@ -22,10 +22,11 @@
     </div><!-- /.container -->
     <footer>
       <ul>
-        <li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        <li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        <li><a href="mailto:devasura@gmail.com">email</a></li>
+        <li><a href="https://github.com/devasura">github.com/devasura</a></li>
       </ul>
     </footer>
   </body>
 </html>
+
 
